force-app/main/default/objects/Stock__c/fields/GST_Percentage__c.field-meta.xml
<CustomField>
    <fullName>GST_Percentage__c</fullName>
    <label>GST Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>