force-app/main/default/objects/Stock__c/fields/Intial_Stock__c.field-meta.xml
<CustomField>
    <fullName>Intial_Stock__c</fullName>
    <label>Intial Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>