force-app/main/default/objects/Stock__c/fields/Manufacturing_Date__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Date__c</fullName>
    <label>Manufacturing Date</label>
    <type>Date</type>
</CustomField>