force-app/main/default/objects/Stock__c/fields/Mismatch_Qty__c.field-meta.xml
<CustomField>
    <fullName>Mismatch_Qty__c</fullName>
    <label>Mismatch Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>