force-app/main/default/objects/Stock__c/fields/Physical_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Physical_Quantity__c</fullName>
    <label>Physical Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>