force-app/main/default/objects/Stock__c/fields/Product_Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Batch_Name__c</fullName>
    <formula>Product__r.Name + &apos; (&apos; +  Batch_Number__c +&apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Batch Name</label>
    <type>Text</type>
</CustomField>