force-app/main/default/objects/Stock__c/fields/Product_Batch_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Batch_Price__c</fullName>
    <formula>Product__r.Name + &apos; (&apos; + Batch_Number__c +&apos;)&apos;+&apos;- ₹ &apos; + TEXT(Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Batch Price</label>
    <type>Text</type>
</CustomField>