force-app/main/default/objects/Stock__c/fields/Product_GST__c.field-meta.xml
<CustomField>
    <fullName>Product_GST__c</fullName>
    <formula>TEXT( Product__r.GST__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product GST</label>
    <type>Text</type>
</CustomField>