force-app/main/default/objects/Stock__c/fields/Product_HSN_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_HSN_Number__c</fullName>
    <formula>Product__r.HSN_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product HSN Number</label>
    <type>Text</type>
</CustomField>