force-app/main/default/objects/Stock__c/fields/Product_Old_GST__c.field-meta.xml
<CustomField>
    <fullName>Product_Old_GST__c</fullName>
    <formula>TEXT( Product__r.Old_GST__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Old GST</label>
    <type>Text</type>
</CustomField>