force-app/main/default/objects/Stock__c/fields/Returned_Qty__c.field-meta.xml
<CustomField>
    <fullName>Returned_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Returned Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>