force-app/main/default/objects/Stock__c/fields/Shortage__c.field-meta.xml
<CustomField>
    <fullName>Shortage__c</fullName>
    <formula>Available_Quantity__c -  Physical_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shortage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>