force-app/main/default/objects/Stock__c/fields/Stock_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_Date__c</fullName>
    <label>Stock Date</label>
    <type>Date</type>
</CustomField>