force-app/main/default/objects/Stock__c/fields/Stock_expiry_notification__c.field-meta.xml
<CustomField>
    <fullName>Stock_expiry_notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stock expiry notification</label>
    <type>Checkbox</type>
</CustomField>