force-app/main/default/objects/Stock__c/fields/Stock_Id__c.field-meta.xml
<CustomField>
    <fullName>Stock_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stock-Id</label>
    <type>AutoNumber</type>
</CustomField>