force-app/main/default/objects/Stock__c/fields/Stock_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Stock_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Transfer</label>
    <referenceTo>Stock_Transfer__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>