force-app/main/default/objects/Stock__c/validationRules/Description_is_mendatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_mendatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Stock_Type__c , &apos;Manufacturing Defect&apos;),
 ISBLANK(Description__c))</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>A description is required to create to set stock type as manufacturing defect.</errorMessage>
</ValidationRule>