force-app/main/default/objects/Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Manufacturing_Date__c</columns>
    <columns>Intial_Stock__c</columns>
    <columns>Available_Quantity__c</columns>
    <columns>Sold_Qty__c</columns>
    <columns>Free_Quantity__c</columns>
    <columns>Damaged_Quantity__c</columns>
    <columns>Batch_Number__c</columns>
    <columns>Price__c</columns>
    <columns>Stock_Type__c</columns>
    <columns>Route__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Returned_Qty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>